[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/asset package custom/particlePack_1.1/PNG (Transparent)/dirt_02.png" type="Texture" id=1]
[ext_resource path="res://Entities/FleshThing/FleshPoker.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/glorpcore.tres" type="Material" id=3]
[ext_resource path="res://Entities/FleshThing/FleshBody.gd" type="Script" id=4]

[sub_resource type="CapsuleMesh" id=11]
material = ExtResource( 3 )
radius = 0.25
mid_height = 0.8

[sub_resource type="CapsuleMesh" id=12]
material = ExtResource( 3 )
radius = 0.3
mid_height = 0.3

[sub_resource type="Curve" id=30]
_data = [ Vector2( 0, 0.5125 ), 0.0, 0.56855, 0, 0, Vector2( 1, 0.154545 ), -0.723923, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=31]
curve = SubResource( 30 )

[sub_resource type="ParticlesMaterial" id=14]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
angular_velocity = 800.0
angular_velocity_random = 1.0
radial_accel = 3.0
tangential_accel = 3.0
scale = 0.5
scale_curve = SubResource( 31 )
color = Color( 0.196078, 0.0117647, 0.0117647, 1 )

[sub_resource type="SpatialMaterial" id=32]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=15]
material = SubResource( 32 )

[sub_resource type="CapsuleShape" id=16]
radius = 0.31869

[sub_resource type="CapsuleShape" id=17]
radius = 0.281787
height = 0.265368

[sub_resource type="Animation" id=18]
resource_name = "IdleBreathing"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:mesh:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 3.3, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.3, 0.31, 0.31, 0.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 3.3, 5.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.366575 ), Vector3( 0, 0, 0.4 ), Vector3( 0, 0, 0.4 ), Vector3( 0, 0, 0.366575 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Torso:mesh:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Torso:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.366575 ) ]
}

[sub_resource type="BoxShape" id=20]
extents = Vector3( 3, 3, 3 )

[node name="FleshBody" type="KinematicBody" groups=["Destructible", "Interactable"]]
script = ExtResource( 4 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0544156 )
mesh = SubResource( 11 )

[node name="Torso" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.366575 )
mesh = SubResource( 12 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.828709 )
skeleton = NodePath("../Body")

[node name="CSGCylinder" type="CSGSphere" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 0, 0.174641 )
radius = 0.3
material = ExtResource( 3 )

[node name="HeadHole" type="CSGCylinder" parent="Head/CSGCylinder"]
transform = Transform( 0.27823, -0.777384, 0.676976, 0.949848, 0.30997, -0.0495834, -0.118956, 0.456125, 0.82464, -0.102413, 0.197541, -0.0697789 )
visible = false
operation = 2
radius = 0.146648
height = 0.402108
cone = true
material = ExtResource( 3 )

[node name="Arms" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.680867 )

[node name="FleshPoker" parent="Arms" instance=ExtResource( 2 )]
transform = Transform( 0.663799, 1.36603, 1.95193, 1.88029, -0.366025, -0.862379, -0.154525, 1.41421, -2.10862, -0.396568, 0, 0.168191 )

[node name="FleshPoker2" parent="Arms" instance=ExtResource( 2 )]
transform = Transform( -2.41161e-08, 1, -2.59808, -2, -8.74228e-08, -3.394e-08, -8.70237e-08, 1.73205, 1.5, 0.467816, 0, -0.15086 )

[node name="Legs" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.705987 )

[node name="FleshPoker" parent="Legs" instance=ExtResource( 2 )]
transform = Transform( 0.441822, 0.767991, -3.34388, 2.96729, -0.114352, 0.497896, -1.8999e-07, -2.89778, -0.905867, 0.45509, -0.0585625, 0.148456 )

[node name="FleshPoker2" parent="Legs" instance=ExtResource( 2 )]
transform = Transform( 0.231934, 2.03596, 2.55632, -2.98294, 0.318856, 0.0227183, -0.21967, -2.18018, 2.39054, -0.385812, -0.0407793, -0.195445 )

[node name="HeadSplatter" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0573053, 0.968199 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )

[node name="HeadSplatter2" type="Particles" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.0573053, 0.167403 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )

[node name="HeadSplatter3" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0573053, -0.474992 )
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )

[node name="BodyColider" type="CollisionShape" parent="."]
shape = SubResource( 16 )

[node name="HeadColider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.955159 )
shape = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleBreathing = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Player_interact" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Player_interact"]
shape = SubResource( 20 )

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]

[node name="Squelch" type="AudioStreamPlayer3D" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
